--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".V.MainActivity"
+            android:name=".view.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -25,9 +25,13 @@
         </activity>
 
         <service
-            android:name=".M.LoadCurrencyService"
+            android:name=".model.LoadCurrencyService"
             android:exported="false" />
 
+        <activity
+            android:name=".view.ValuesActivity"
+            android:label="@string/title_activity_values"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
